# backend

./: .coveragerc  .gitignore  AUTHORS.md  Dockerfile  Dockerfile.dev  Dockerfile.live  INTERNALS.md  MANIFEST.in  README.md  TODO.md  config-example.yaml  db.py  db_helper.py  decrypt.py  generate-schema-diagram.sh  mail.py  main.py  mypy.ini  permissions.py  project.py  requirements.auth.txt  requirements.base.txt  requirements.dev.txt  requirements.txt  setup.cfg  start.sh  type_hints.py
cogs/: decrypt.py  mail.py  main.py  permissions.py  type_hints.py
config/: __init__.py  config-example.yaml  config.py  config.yaml  load.py
email_template/: can_set_projects_contents.jinja2  can_set_projects_subject.jinja2  cogs_not_found_contents.jinja2  feedback_given_contents.jinja2  feedback_given_subject.jinja2  invite_sent_contents.jinja2  invite_sent_subject.jinja2  pester_generic_contents.jinja2  project_selected_student_contents.jinja2  project_selected_student_subject.jinja2  project_selected_supervisor_contents.jinja2  project_selected_supervisor_subject.jinja2  student_uploaded_contents.jinja2  student_uploaded_subject.jinja2  supervisor_submit_grad_office_subject.jinja2
mail/: __init__.py
routes/: __init__.py  email_editor.py  export_group.py  finalise_choices.py  finalise_cogs.py  group_create.py  group_edit_cogs.py  index.py  login.py  mark_projects.py  project_create.py  project_edit.py  project_feedback.py  project_overview.py  project_page.py  resubmit_project.py  student_upload.py  student_vote.py  user_overview.py  user_page.py
scheduling/: __init__.py  (+7 more)
(+193 files in other folders)
