[metadata]
name = wsi-cogs-backend
version = attr: cogs.__version__
license_file = LICENSE

[options]
# Things like the templates won't work if they're inside a zip.
zip_safe = False
# Include the templates (etc.) in wheels (see MANIFEST.in).
include_package_data = True
# The PyYAML version we're using (3.13) won't work on Python 3.8.
python_requires = ~=3.7.0
test_suite = test
packages = find:
install_requires =
    SQLAlchemy == 1.2.10
    psycopg2-binary == 2.7.5
    APScheduler == 3.5.2
    Jinja2 == 2.10
    XlsxWriter == 1.0.5
    aiohttp == 3.5.1
    aiohttp_cors == 0.7.0
    bleach == 2.1.3
    beautifulsoup4 == 4.8.0
    html2text == 2018.1.9
    natural == 0.2
    PyYAML == 3.13
    pytz
    typing-extensions
tests_require = %(_test_requirements)s

[options.packages.find]
# The only packages that should be included in the distribution are `cogs` and subpackages.
include =
    cogs
    cogs.*

[options.extras_require]
# Allow extra dependencies to be installed if necessary.
pagesmith =
    mysqlclient == 1.3.13
    blowfish == 0.6.1
tests = %(_test_requirements)s

# Support both `python setup.py test` and `pip install -e .[tests] && python -m unittest`.
[DEFAULT]
_test_requirements =
    hypothesis == 4.28
    sqlalchemy-stubs
